<resources>
    <string name="app_name">My Profile</string>
    <string name="profile_creation">Profile Creation</string>
    <string name="use_form">Use the form below to submit your portfolio.\nAn email and password are required.</string>
    <string name="add_avatar">Tap to add\navatar</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="website">Website</string>
    <string name="submit">Submit</string>
    <string name="signIn">Sign In</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email address</string>
    <string name="please_enter_valid_email">Please enter valid email address</string>
    <string name="please_enter_valid_url">Please enter valid url</string>
    <string name="please_enter_valid_password">Please enter valid password</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_data">Please enter data</string>
    <string name="superHit">Your super-awesome portfolio has been successfully submitted! The preview below is what the community will see!</string>
</resources>